# model-gateway

./: .env.example  .gitignore  .mise.toml  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.release-runtime  LICENSE  LICENSE-MIT  NOTICE  README.md  docker-compose.yml  gateway.core.example.toml  gateway.example.toml  gateway.optional.example.toml  gateway.secondary.example.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: benchmarks.md  configuration.md  getting-started.md  provider-compatibility.md  providers.md  routing.md
scripts/: core-provider-check.sh  docker-smoke.sh  hermes-smoke.sh  mock_provider.py  native-smoke.sh  probe-provider-limits.sh  release-smoke.sh  restart-server.sh  start-server.sh  verify-provider-limits.sh
src/: benchmarks.rs  config.rs  gateway.rs  lib.rs  main.rs  providers.rs  routing.rs  secrets.rs  storage.rs
tests/: cli.rs  gateway_smoke.rs
