[package]
name = "model-gateway"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A local OpenAI-compatible model gateway"
readme = "README.md"

[lib]
name = "model_gateway"
path = "src/lib.rs"

[[bin]]
name = "model-gateway"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
keyring = { version = "3.6", features = ["apple-native", "linux-native"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.9"
url = "2"

[dev-dependencies]
tempfile = "3"
