[package]
name = "model-gateway"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A local OpenAI-compatible model gateway"
readme = "README.md"
repository = "https://github.com/0xPlayerOne/model-gateway"

[lib]
name = "model_gateway"
path = "src/lib.rs"

[[bin]]
name = "model-gateway"
path = "src/main.rs"

[dependencies]
axum = "0.8"
async-stream = "0.3"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
futures-util = "0.3"
keyring = { version = "3.6", features = ["apple-native", "linux-native"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"

[dev-dependencies]
tempfile = "3"
